--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "lint": "eslint src -c .eslintrc.json --ext js",
+    "lint:fix": "eslint src -c .eslintrc.json --ext js --fix",
+    "check-staged": "lint-staged"
   },
   "keywords": [],
   "author": "Edwin Kato <katedwin88@gmail.com>",
@@ -21,17 +24,42 @@
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.6",
     "autoprefixer": "^9.7.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "config": "^3.2.4",
     "css-loader": "^3.3.0",
     "cssnano": "^4.1.10",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.2.4",
+    "lint-staged": "^10.1.3",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
+    "prettier": "^2.0.4",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js}": [
+      "eslint"
+    ],
+    "*.{js,md}": [
+      "prettier --list-different"
+    ]
   }
 }
