--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "webpack-dev-server",
     "lint": "eslint src -c .eslintrc.json --ext js",
     "lint:fix": "eslint src -c .eslintrc.json --ext js --fix",
-    "check-staged": "lint-staged"
+    "check-staged": "lint-staged",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Edwin Kato <katedwin88@gmail.com>",
@@ -23,6 +24,8 @@
     "@babel/plugin-transform-async-to-generator": "^7.7.4",
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.6",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.1",
     "autoprefixer": "^9.7.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
@@ -39,12 +42,14 @@
     "eslint-plugin-prettier": "^3.1.2",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.4",
+    "jest": "^25.3.0",
     "lint-staged": "^10.1.3",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.4",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
+    "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
