--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,14 @@
 {
     "compilerOptions": {
+        "target": "es6",
         "module": "commonjs",
-        "target": "es5",
+        "lib": ["es5", "es6", "dom"],
+        "strict": true,
+        "declaration": true,
+        "outDir": "dist",
         "sourceMap": true
     },
+    "include": ["src/**/*"],
     "exclude": [
         "node_modules"
     ]
